# rust-appearance-measurement

./: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
.github/workflows/: build.yml
ci/: install.sh
src/: main.rs
src-js/: index.html  main.jsx  style.css
